# Another-Simple-Ray-Tracer

./: Cargo.toml  LICENSE  README.md  images.ppm
images/: EPSILON.tiff
src/: camera.rs  colors.rs  controls.rs  hittable.rs  hittable_list.rs  lib.rs  main.rs  material.rs  rays.rs  sphere.rs  tests.rs  vec3.rs
src/controls/: args.rs  camera.rs  colors.rs  hit.rs  mod.rs  render.rs  stats.rs  world.rs
src/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs  scatter.rs
src/rendering/: colors.rs  mod.rs  rays.rs
src/shapes/: sphere.rs
src/threading/: mod.rs  pixels.rs  stats.rs
