[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["Rayne Rivers <gennierivers@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
crossbeam = "0.8.0"
crossterm = "0.19.0"
rand = "0.8.3"
rayon = "1.5.0"

[profile.release]
debug = true